--- a/Martin Bouchard.tex
+++ b/Martin Bouchard.tex
@@ -256,16 +256,16 @@ Durant mes temps libres j'aiguise mon savoir faire dans des projets personnels i
 \vspace{1em}
 \cvprojectitem{Conception}{Élaboration et mise en place d'un \textit{content creation interface}. Un administrateur devait pouvoir créer des formulaires et des champs d'entré de données avec des régles de validations configurables (similaire à un \textit{CMS})}
 \vspace{1em}
-\textbf{Portal de gestion de licenses - Sharegate} \newline
-\small{Un portal qui permet aux utilisateurs d'avoir de l'information sur leur license ainsi que d'y effectuer plusieurs manipulation.}
+\textbf{Portail de gestion de licenses - Sharegate} \newline
+\small{Un portail qui permet aux utilisateurs d'avoir de l'information sur leur license ainsi que d'y effectuer plusieurs manipulation.}
 \begin{flushright}{\rmfamily\textsl{Technologies: C\#/Asp.net, React, Micro-services, Salesforce Apex}}\end{flushright}
 \vspace{1em}
 \cvprojectitem{Évolution de système legacy}{Ajouter de nouvelles règles d'affaires a un système legacy hautement critique. Cela a requis une approche methodique et itérative.}
 \cvprojectitem{Infrastructure, microservice, CI}{Monter une infratructure avec des environments de developpement (dev, qa, uat, prod) et de \textit{continuous integration} avec \href{https://visualstudio.microsoft.com/team-services/}{\textit{VSTS}}}
 \vspace{1em}
 
-\textbf{Portal de ventes de licenses - Sharegate} \newline
-\small{Un portal qui permet à des revendeurs de faires des quotes pour leur clients et vendre des licenses}
+\textbf{Portail de ventes de licenses - Sharegate} \newline
+\small{Un portail qui permet à des revendeurs de faires des quotes pour leur clients et vendre des licenses}
 \begin{flushright}{\rmfamily\textsl{Technologies: C\#/Asp.net, React, Micro-services, Sql/server, Azure Directory, Salesforce Apex}}\end{flushright}
 \vspace{1em}
 \cvprojectitem{Event storming}{Afin de bien comprendre le besoin d'affaires et aligné les membres des différents département impliqués dans ce projet, nous avons utilisé la methologie de \textit{event storming}.}
