ajout de section legacy

--- a/Martin Bouchard.tex
+++ b/Martin Bouchard.tex
@@ -256,11 +256,20 @@ Durant mes temps libres j'aiguise mon savoir faire dans des projets personnels i
 \vspace{1em}
 \cvprojectitem{Conception}{Élaboration et mise en place d'un \textit{content creation interface}. Un administrateur devait pouvoir créer des formulaires et des champs d'entré de données avec des régles de validations configurables (similaire à un \textit{CMS})}
 \vspace{1em}
+
+\textbf{Maintenance et évolution de système lecagy critique - Sharegate} \newline
+\small{Un portail qui permet aux utilisateurs d'avoir de l'information sur leur license ainsi que d'y effectuer plusieurs manipulation.}
+\begin{flushright}{\rmfamily\textsl{Technologies: C\#/Asp.net, React, Micro-services, Salesforce Apex}}\end{flushright}
+\vspace{1em}
+\cvprojectitem{Performance}{Ajout d'une couche de \textit{caching} qui a donné des gains majeurs de performances}
+\cvprojectitem{Logging}{Investiguation et correction d'un problème qui a nécessité des changements à la grandeur du système. Après le changement il y a eu une reduction de plus de 20,000 erreurs par jour}
+\vspace{1em}
+
 \textbf{Portail de gestion de licenses - Sharegate} \newline
 \small{Un portail qui permet aux utilisateurs d'avoir de l'information sur leur license ainsi que d'y effectuer plusieurs manipulation.}
 \begin{flushright}{\rmfamily\textsl{Technologies: C\#/Asp.net, React, Micro-services, Salesforce Apex}}\end{flushright}
 \vspace{1em}
-\cvprojectitem{Évolution de système legacy}{Ajouter de nouvelles règles d'affaires a un système legacy hautement critique. Cela a requis une approche methodique et itérative. Ajout d'une couche de \textit{caching} qui a donné des gains majeurs de performances}
+\cvprojectitem{Front-end}{Travail en étroite collaboration avec les designers pour créer une expérience client de qualité}
 \cvprojectitem{Infrastructure, microservice, CI}{Monter une infratructure avec des environments de developpement (dev, qa, uat, prod) et de \textit{continuous integration} avec \href{https://visualstudio.microsoft.com/team-services/}{\textit{VSTS}}}
 \vspace{1em}
 
