--- a/Martin Bouchard.tex
+++ b/Martin Bouchard.tex
@@ -262,7 +262,7 @@ Durant mes temps libres j'aiguise mon savoir faire dans des projets personnels i
 \begin{flushright}{\rmfamily\textsl{Technologies: C\#/Asp.net, React, Micro-services, Salesforce Apex}}\end{flushright}
 \vspace{1em}
 \cvprojectitem{Performance}{Ajout d'une couche de \textit{caching} qui a donné des gains majeurs de performances}
-\cvprojectitem{Logging}{Investiguation et correction d'un problème qui a nécessité des changements à la grandeur du système. Après le changement il y a eu une reduction de plus de 20,000 erreurs par jour}
+\cvprojectitem{Logging/Maintenance}{Investiguation et correction d'un problème qui a nécessité des changements à la grandeur du système. Après le changement il y a eu une reduction de plus de 20,000 erreurs par jour}
 \vspace{1em}
 
 \textbf{Portail de gestion de licenses - Sharegate} \newline
