--- a/Martin Bouchard.tex
+++ b/Martin Bouchard.tex
@@ -196,7 +196,7 @@
 %-------------------------------------------------- SOMMAIRE --------------------------------------------------%
 %-----------------------------------------------------------------------------------------------------------------------%
 \section{Sommaire}
-{Informaticien en génie logiciel de formation, j'ai aussi fais un passage dans le domaine des arts visuels et de la criminologie. 
+{Informaticien en génie logiciel de formation, j'ai aussi fait un passage dans le domaine des arts visuels et de la criminologie. 
 Durant mes temps libres j'aiguise mon savoir faire dans des projets personnels impliquant de l'algorithmie, machine learning ou web.}
 \vspace{-1em}
 \section{Formation}
@@ -214,7 +214,7 @@ Durant mes temps libres j'aiguise mon savoir faire dans des projets personnels i
 
 \cventre[1.3em]{2015}{Développeur full-stack}
 {GSOFT}
-{Travail en mode agile sur plusieurs projets avec des équipes allant de 2 à 6 développeurs. Responsable de l'architecture de plusieurs fonctionnalités et impliqué dans la conception de beaucoup d'autres autant front-end que back-end. }
+{Travail en mode agile sur plusieurs projets avec des équipes de 2 à 6 développeurs. Responsable de l'architecture de plusieurs fonctionnalités et impliqué dans la conception de beaucoup d'autres autant front-end que back-end. }
 {$\bullet$ Agile  $\bullet$ Conception d'API $\bullet$ SQL Server $\bullet$ RavenDB (non relationnelle) $\bullet$ Microsoft Azure $\bullet$ Architecture d'application sous forme de service $\bullet$ Relation direct avec les clients }
 
 \cventre[1.3em]{2013}{Stagiaire}
@@ -244,21 +244,21 @@ Durant mes temps libres j'aiguise mon savoir faire dans des projets personnels i
 \small{ Sentinelle est une plateforme \textit{SAS} \textit{multi-tetant} et personnalisable pour aider les syndicats de plusieurs domaines dans la gestion de leur membres.}
 \begin{flushright}{\rmfamily\textsl{Technologies: C\#, Knockout, RavenDb}}\end{flushright}
 \vspace{1em}
-\cvprojectitem{BD Raven(NO SQL)}{Conceptualisé un schéma de base de donnée configurable. Cette application est multi-tenant et demandait donc une manière de configurer des environments selon les besoins uniques d'un client à l'autre}
-\cvprojectitem{Front-end (Knockout)}{Développement de plusieurs composante \textit{responsive} et \textit{ré-utilisable} qui ont accéléré le développement et la stabilité}
-\cvprojectitem{C\#}{Conception d'un engin de règle dynamique. Cette fonctionnalité permet au clients de configurer des alerts selon des filtres avec des conditions selon certains événement dans le système}
-\cvprojectitem{C\#}{Pont de synchronisation de données entre deux systèmes. Les changements sauvegardés et sérialisés dans une BD secondaire puis exposé à l'autre système par un API sécurisé.}
+\cvprojectitem{RavenBD (NO SQL)}{Conceptualiser un schéma configurable de base de données. Cette application est multi-tenant et demandait donc une manière de configurer des environments selon les besoins uniques d'un client à l'autre}
+\cvprojectitem{Front-end (Knockout)}{Développement de plusieurs composantes \textit{responsive} et \textit{ré-utilisable} qui ont accéléré le développement et la stabilité}
+\cvprojectitem{C\#}{Conception d'un engin de règle dynamique. Cette fonctionnalité permet au clients de configurer des alertes selon des filtres avec des conditions selon certains événements dans le système}
+\cvprojectitem{C\#}{Pont de synchronisation de données entre deux systèmes. Les changements sauvegardés et sérialisés dans une BD secondaire puis exposés à l'autre système par un API sécurisé.}
 \vspace{1em}
 \newpage
 \textbf{Système de gestion de fournisseur - Simetryk} (\href{https://simetryk.com/en/}{https://simetryk.com/en/})\newline{}
 \small{ Simetryk est une plateforme \textit{SAS} \textit{multi-tetant} et personnalisable de gestion centralisé de fournisseur.} 
 \begin{flushright}{\rmfamily\textsl{Technologies: C\#/Asp.net, Knockout, RavenDb, Azure}}\end{flushright}
 \vspace{1em}
-\cvprojectitem{Conception}{Élaboration et mise en place d'un \textit{content creation interface}. Un administrateur devait pouvoir créer des formulaires et des champs d'entré de données avec des régles de validations configurables (similaire à un \textit{CMS})}
+\cvprojectitem{Conception}{Élaboration et mise en place d'un \textit{content creation interface}. Un administrateur devait pouvoir créer des formulaires et des champs d'entrée de données avec des régles de validations configurables (similaire à un \textit{CMS})}
 \vspace{1em}
 
 \textbf{Maintenance et évolution de système lecagy critique - Sharegate} \newline
-\small{Un portail qui permet aux utilisateurs d'avoir de l'information sur leur license ainsi que d'y effectuer plusieurs manipulation.}
+\small{Un portail qui permet aux utilisateurs d'avoir de l'information sur leur license ainsi que d'y effectuer plusieurs manipulations.}
 \begin{flushright}{\rmfamily\textsl{Technologies: C\#/Asp.net, React, Micro-services, Salesforce Apex}}\end{flushright}
 \vspace{1em}
 \cvprojectitem{Performance}{Ajout d'une couche de \textit{caching} qui a donné des gains majeurs de performances}
@@ -270,21 +270,21 @@ Durant mes temps libres j'aiguise mon savoir faire dans des projets personnels i
 \begin{flushright}{\rmfamily\textsl{Technologies: C\#/Asp.net, React, Micro-services, Salesforce Apex}}\end{flushright}
 \vspace{1em}
 \cvprojectitem{Front-end}{Travail en étroite collaboration avec les designers pour créer une expérience client de qualité}
-\cvprojectitem{Infrastructure, microservice, CI}{Monter une infratructure avec des environments de developpement (dev, qa, uat, prod) et de \textit{continuous integration} avec \href{https://visualstudio.microsoft.com/team-services/}{\textit{VSTS}}}
+\cvprojectitem{DevOps, microservice, CI}{Monter une infrastructure avec des environments de developpement (dev, qa, uat, prod) et de \textit{continuous integration} avec \href{https://visualstudio.microsoft.com/team-services/}{\textit{VSTS}}}
 \vspace{1em}
 
 \textbf{Portail de ventes de licenses - Sharegate} \newline
 \small{Un portail qui permet à des revendeurs de faires des quotes pour leur clients et vendre des licenses}
 \begin{flushright}{\rmfamily\textsl{Technologies: C\#/Asp.net, React, Micro-services, Sql/server, Azure Directory, Salesforce Apex}}\end{flushright}
 \vspace{1em}
-\cvprojectitem{Event storming}{Afin de bien comprendre le besoin d'affaires et aligné les membres des différents département impliqués dans ce projet, nous avons utilisé la methologie de \textit{event storming}.}
+\cvprojectitem{Event storming}{Afin de bien comprendre le besoin d'affaires et aligner les membres des différents départements engagés dans ce projet, nous avons utilisé la methologie de \textit{event storming}.}
 \cvprojectitem{Front-end (React)}{Un des contributeurs principaux au développement front-end. Supervise la qualité du code ainsi que les decisions critiques dans l'évolution de l'architecture}
 \cvprojectitem{Event sourcing}{Tout notre architecture back-end (de ce microservice) utilise les techniques du \textit{Event sourcing}. Cela nous donne l'avantage de maintenir un model très similaire à celui qui a été discuté lors du \textit{Event storming}.}
 \vspace{1em}
 
 \textbf{Autres projets - Pour le plaisir} (\href{https://github.com/GitMyCode}{https://github.com/GitMyCode})\newline{}
 \small{ Plusieurs projets de programmation que j'ai fais dans mes temps libres.} \vspace{1em}\newline{} 
-\cvprojectitem{Application mobile (React-Native)}{Je travail présentement au développement d'une app mobile. Je suis en collaboration avec deux cardiologues qui écrivent le contenu. C'est une application qui permettra aux medecins d'avoir de l'information specialisé directement sur leur téléphone. 
+\cvprojectitem{Application mobile (React-Native)}{Travaille présentement au développement d'une app mobile. En collaboration avec deux cardiologues qui écrivent le contenu. C'est une application qui permettra aux medecins d'avoir de l'information specialisée directement sur leur téléphone. 
 Le contenu est écrit en \textit{markdown} qui est ensuite converti en react-native automatiquement.}
 \cvprojectitem{MineSweeper AI (Java)}{Un A.I qui résoud le jeu de minesweeper (\href{https://github.com/GitMyCode/MinesweeperAi}{https://github.com/GitMyCode/MinesweeperAi})}
 \cvprojectitem{CSGAMES 2016 (C\#)}{J'ai crée le défi que les participants devaient résoudre dans le cadre de la compétition algorithme des csgames de 2016 (\href{https://github.com/GitMyCode/csgames-algorithm-2016}{https://github.com/GitMyCode/csgames-algorithm-2016})}
