--- a/Martin Bouchard.tex
+++ b/Martin Bouchard.tex
@@ -372,10 +372,10 @@ Le contenu est écrit en \textit{markdown} qui est ensuite converti en react-nat
 %-------------------------------------------------- Autre --------------------------------------------------%
 %-----------------------------------------------------------------------------------------------------------------------%
 \section{Autres}
-\subsection{Activité}
+\subsection{Loisir et Activité}
 \begin{itemize}
 
-\item Je joue le plus souvent possible au soccer
+\item Je joue 2 à 3 fois semaine au soccer
 \item Bénévolat au CSJR (Centre de Service de Justice Reparatrice)
 \item Bénévolat comme caméraman à Télémag
 \end{itemize}
