ajouter les date plus precise pour le travail

--- a/Martin Bouchard.tex
+++ b/Martin Bouchard.tex
@@ -212,12 +212,16 @@ Durant mes temps libres j'aiguise mon savoir faire dans des projets personnels i
 %-----------------------------------------------------------------------------------------------------------------------%
 \section{Expérience Professionnelle}
 
-\cventre[1.3em]{2015}{Développeur full-stack}
+\cventre[1.3em]{mars 2015 - Aujourd'hui}{Développeur full-stack}
 {GSOFT}
 {Travail en mode agile sur plusieurs projets avec des équipes de 2 à 6 développeurs. Responsable de l'architecture de plusieurs fonctionnalités et impliqué dans la conception de beaucoup d'autres autant front-end que back-end. }
 {$\bullet$ Agile/Scrum $\bullet$ Relation direct avec les clients $\bullet$ Conception d'API $\bullet$ Microservices $\bullet$ Microsoft Azure \newline{} $\bullet$ Impliqué dans le cycle complet d'un logiciel: conception, développement, support/évolution}
 
-\cventre[1.3em]{2013}{Stagiaire}
+\cventre[1.3em]{avr. 2014 – août 2014}{Développeur Stagiaire}
+{Telica Software inc.}
+{J'etais développeur fullstack sur une application web fait avec Ruby on Rails}
+
+\cventre[1.3em]{mai 2013 – sept. 2013}{Développeur Stagiaire}
 {Ville de Montréal}
 {Conception d'applications d'affaires sur la plateforme de développement web Apex de Oracle.}
 {$\bullet$ Design d'interface utilisateur  $\bullet$ Programmation front-end et back-end (Apex) de page web \\$\bullet$ Écrire de la documentation et recommendations sur des choix technologiques }
@@ -361,12 +365,12 @@ Le contenu est écrit en \textit{markdown} qui est ensuite converti en react-nat
 \section{Langages et technologies}
 \cvdescriptionterm{Humain}{Français langue maternelle et anglais courant}
 \cvdescriptionterm{Architecture}{Event Sourcing, Domain Driven Design, CQRS, Layer Architecture}
-\cvdescriptionterm{Langage}{c\#, Java, scala, javascript es6, Python, ruby, Salesforce Apex, Latex}
+\cvdescriptionterm{Langage}{c\#, Python, javascript, Java, scala, ruby, Salesforce Apex, Latex}
 \cvdescriptionterm{Framework}{React, Asp.net, Rails, Wordpress, Knockout}
 \cvdescriptionterm{Mobile}{React-Native, Android}
 \cvdescriptionterm{VCS}{Git}
 \cvdescriptionterm{Server}{Node, IIS}
-\cvdescriptionterm{Database}{Sql server, RavenDb}
+\cvdescriptionterm{Database}{Sql server, RavenDb, MondoDb, Postgresql}
 
 %-----------------------------------------------------------------------------------------------------------------------%
 %-------------------------------------------------- Autre --------------------------------------------------%
