enlever ligne inutil

--- a/Martin Bouchard.tex
+++ b/Martin Bouchard.tex
@@ -260,7 +260,7 @@
 
 \cventre[1.3em]{2012}{Developer}
 {Fasken Martineau DuMoulin, LLP}
-{Programming templates with the XpressDox API. This API integrates with Microsoft Word and automates document generation. I was the only one who knew how to use XpressDox in the company.}
+{Programming templates with the XpressDox API. This API integrates with Microsoft Word and automates document generation.}
 {$\bullet$ Develop a framework and development tools $\bullet$ Propose solutions to lawyers' needs \newline{}}
 
 %-----------------------------------------------------------------------------------------------------------------------%
